--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install mkdocs mkdocs-material mkdocs-techdocs-core
+      - run: pip install mkdocs mkdocs-material mkdocs-material-extensions mkdocs-techdocs-core
       - name: Build with mkdocs
         working-directory: docs
         run: mkdocs build
